# PHARE

./: .sublime-project  .sublime-project.sublime-workspace  mkn.sh  mkn.yaml  mpi.yaml
src/diagnostic/: diagnostic_manager.h
src/diagnostic/detail/: highfive.h
src/phare/: phare.cpp
src/simulator/: simulator.h
tests/diagnostic/: include.h  test_main.cpp
tests/simulator/: CMakeLists.txt  initialize.cpp  per_test.h
tests/simulator/py/: job.footer.py.txt  job.header.py.txt
tests/simulator/py/sims/: 0  1  2
